manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfirstwebsite
  labels:
    app: myfirstwebsite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myfirstwebsite
  template:
    metadata:
      labels:
        app: myfirstwebsite
    spec:
      containers:
      - name: myfirstwebsite
        image: devlopmentacr.azurecr.io/myfirstwebsite:b4c61f9476aa6c2fce1bae2ddcf7ed2ae2459e13
        ports:
        - containerPort: 80
