manifests/Azure-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebsite-deployment
  labels:
    app: mywebsite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywebsite
  template:
    metadata:
      labels:
        app: mywebsite
    spec:
      containers:
      - name: dotnetapp
        image: devlopmentacr.azurecr.io/mywebsite:af5cc12752048cffc695d6ac79895d5cb86c5f52
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: mywebsite-service
spec:
  selector:
    app: mywebsite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
