manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebsite-service
spec:
  selector:
    app: dotnetapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
