manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebsite-ingress1 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mywebsite.com
    http:
      paths:
      - backend:
          service:
            name: mywebsite-service
            port:
              number: 80
        path: /
        pathType: Prefix
